[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/theme.tres" type="Theme" id=1]
[ext_resource path="res://src/tools/props/prop.gd" type="Script" id=3]
[ext_resource path="res://src/tools/props/properties.gd" type="Script" id=4]

[sub_resource type="SphereMesh" id=1]

[node name="Ball" type="Spatial"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )

[node name="Properties" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -130.0
margin_right = 216.0
margin_bottom = 130.0
theme = ExtResource( 1 )
window_title = "Properties"
script = ExtResource( 4 )

[node name="Tabs" type="Tabs" parent="Properties"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TabContainer" type="TabContainer" parent="Properties/Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
tab_align = 0

[node name="Transform" type="Control" parent="Properties/Tabs/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 42.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Control" type="Control" parent="Properties/Tabs/TabContainer/Transform"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Properties/Tabs/TabContainer/Transform/Control"]
anchor_right = 1.0
margin_bottom = 20.0
text = "Position"

[node name="HBoxContainer" type="HBoxContainer" parent="Properties/Tabs/TabContainer/Transform/Control"]
margin_left = -2.0
margin_top = 21.0
margin_right = 38.0
margin_bottom = 53.0

[node name="x" type="SpinBox" parent="Properties/Tabs/TabContainer/Transform/Control/HBoxContainer"]
margin_right = 74.0
margin_bottom = 32.0
max_value = 9000.0

[node name="y" type="SpinBox" parent="Properties/Tabs/TabContainer/Transform/Control/HBoxContainer"]
margin_left = 78.0
margin_right = 152.0
margin_bottom = 32.0
max_value = 9000.0

[node name="z" type="SpinBox" parent="Properties/Tabs/TabContainer/Transform/Control/HBoxContainer"]
margin_left = 156.0
margin_right = 230.0
margin_bottom = 32.0
max_value = 9000.0

[connection signal="value_changed" from="Properties/Tabs/TabContainer/Transform/Control/HBoxContainer/x" to="Properties" method="_on_x_value_changed"]
[connection signal="value_changed" from="Properties/Tabs/TabContainer/Transform/Control/HBoxContainer/y" to="Properties" method="_on_y_value_changed"]
[connection signal="value_changed" from="Properties/Tabs/TabContainer/Transform/Control/HBoxContainer/z" to="Properties" method="_on_z_value_changed"]
